<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/avatarImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:onClick="OnSetAvatarButton"
                app:srcCompat="@drawable/ic_logo_00" />

        <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_title"
                android:textAlignment="center" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/teamNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_teamName"
                    android:inputType="textPersonName"
                    android:textAlignment="center" />

            <TextView
                    android:id="@+id/teamNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_teamname"
                    android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/teamAddressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_zipcode"
                    android:inputType="textPersonName"
                    android:textAlignment="center" />

            <TextView
                    android:id="@+id/teamAddressTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_teamaddress"
                    android:textAlignment="center" />
        </LinearLayout>

        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <Button
                android:id="@+id/btn_maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="OnOpenInGoogleMaps"
                android:text="@string/btn_googleMaps" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>